Add domain sensitivity

--- a/Assignment 2/Assignment 2.ipynb
+++ b/Assignment 2/Assignment 2.ipynb
@@ -36,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 1,
    "id": "25799c9a77429e34",
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T11:43:44.775039100Z",
-     "start_time": "2023-11-28T11:43:44.481789400Z"
-    },
-    "collapsed": false
+     "end_time": "2023-11-28T14:48:26.675533300Z",
+     "start_time": "2023-11-28T14:48:26.458140200Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -56,12 +56,14 @@
     "    \"\"\"\n",
     "    docs = []\n",
     "    labels = []\n",
+    "    categories = []\n",
     "    with open(doc_file, encoding='utf-8') as f:\n",
     "        for line in f:\n",
     "            words = line.strip().split()\n",
     "            docs.append(words[3:])\n",
     "            labels.append(words[1])\n",
-    "    return docs, labels"
+    "            categories.append(words[0]) # Used in domain sensitivity section\n",
+    "    return docs, labels, categories"
    ]
   },
   {
@@ -76,14 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 2,
    "id": "74cb4576eb34d477",
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T11:43:44.873047400Z",
-     "start_time": "2023-11-28T11:43:44.495158700Z"
-    },
-    "collapsed": false
+     "end_time": "2023-11-28T14:48:26.690559300Z",
+     "start_time": "2023-11-28T14:48:26.677521900Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -91,13 +93,13 @@
     "    \"\"\"\n",
     "    Splits the data into training and validation sets.\n",
     "    \"\"\"\n",
-    "    all_docs, all_labels = read_documents(doc_file)\n",
+    "    all_docs, all_labels, all_categories = read_documents(doc_file)\n",
     "    split_point = int(train_split * len(all_docs))\n",
     "    train_docs = all_docs[:split_point]\n",
     "    train_labels = all_labels[:split_point]\n",
     "    val_docs = all_docs[split_point:]\n",
     "    val_labels = all_labels[split_point:]\n",
-    "    return train_docs, train_labels, val_docs, val_labels, all_docs, all_labels"
+    "    return train_docs, train_labels, val_docs, val_labels, all_docs, all_labels, all_categories"
    ]
   },
   {
@@ -112,28 +114,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 3,
    "id": "650f7e1ff48a8e9e",
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T11:43:45.535322100Z",
-     "start_time": "2023-11-28T11:43:44.513959900Z"
-    },
-    "collapsed": false
+     "end_time": "2023-11-28T14:48:27.441139400Z",
+     "start_time": "2023-11-28T14:48:26.697572700Z"
+    }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "([('seeks', {'pos': -10.91934950295121, 'neg': -11.604733415225777}),\n",
-       "  ('curry', {'pos': -12.459794543898358, 'neg': -12.857496383721145}),\n",
-       "  ('seriousness', {'pos': -12.459794543898358, 'neg': -11.758884095053036}),\n",
-       "  ('6-month', {'pos': -13.558406832566469, 'neg': -12.857496383721145}),\n",
-       "  ('37:4', {'pos': -13.558406832566469, 'neg': -12.857496383721145})],\n",
-       " {'pos': -0.6761896870922498, 'neg': -0.7103971982200179})"
-      ]
+      "text/plain": "([('rubin-directed', {'pos': -12.865259652006523, 'neg': -13.55064356428109}),\n  ('geller', {'pos': -12.865259652006523, 'neg': -13.55064356428109}),\n  ('afeni', {'pos': -13.558406832566469, 'neg': -12.857496383721145}),\n  ('duracells', {'pos': -13.558406832566469, 'neg': -12.857496383721145}),\n  ('shirley', {'pos': -11.948968920132367, 'neg': -11.06573691449309})],\n {'pos': -0.6761896870922498, 'neg': -0.7103971982200179})"
      },
-     "execution_count": 127,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +182,7 @@
     "    return log_probs, log_prob_class\n",
     "\n",
     "# Splitting the data and then training the model using the training data\n",
-    "train_docs, train_labels, val_docs, val_labels, all_docs, all_labels = split_data('reviews.txt')\n",
+    "train_docs, train_labels, val_docs, val_labels, all_docs, all_labels, all_categories = split_data('reviews.txt')\n",
     "model, log_prob_class = train_nb(train_docs, train_labels)\n",
     "\n",
     "# Printing 5 instances of the model for verification\n",
@@ -206,14 +201,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 4,
    "id": "549f2794903a9fe3",
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T11:43:45.551407100Z",
-     "start_time": "2023-11-28T11:43:45.525978600Z"
-    },
-    "collapsed": false
+     "end_time": "2023-11-28T14:48:27.456203Z",
+     "start_time": "2023-11-28T14:48:27.442138600Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -237,28 +232,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 5,
    "id": "1f9021e224ce387e",
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T11:43:45.552410200Z",
-     "start_time": "2023-11-28T11:43:45.541857100Z"
-    },
-    "collapsed": false
+     "end_time": "2023-11-28T14:48:27.537073400Z",
+     "start_time": "2023-11-28T14:48:27.460738300Z"
+    }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "(0.0013212141496043825,\n",
-       " 0.0005283997934747295,\n",
-       " 0.00017230368700664423,\n",
-       " 0.0004547440646873432,\n",
-       " -12.807858361140351,\n",
-       " -13.486891735775352)"
-      ]
+      "text/plain": "(0.0013212141496043825,\n 0.0005283997934747295,\n 0.00017230368700664423,\n 0.0004547440646873432,\n -12.807858361140351,\n -13.486891735775352)"
      },
-     "execution_count": 129,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,14 +273,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 6,
    "id": "ece68b5805521e7f",
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T11:43:45.625536400Z",
-     "start_time": "2023-11-28T11:43:45.557407Z"
-    },
-    "collapsed": false
+     "end_time": "2023-11-28T14:48:27.538096300Z",
+     "start_time": "2023-11-28T14:48:27.474274800Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -313,27 +301,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 7,
    "id": "6571dc86a2f79bb6",
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T11:43:45.640066900Z",
-     "start_time": "2023-11-28T11:43:45.572453300Z"
-    },
-    "collapsed": false
+     "end_time": "2023-11-28T14:48:27.540074Z",
+     "start_time": "2023-11-28T14:48:27.489404200Z"
+    }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "[(['great'], 'pos'),\n",
-       " (['bad'], 'neg'),\n",
-       " (['amazing'], 'pos'),\n",
-       " (['terrible'], 'neg'),\n",
-       " (['a', 'top-quality', 'performance'], 'pos')]"
-      ]
+      "text/plain": "[(['great'], 'pos'),\n (['bad'], 'neg'),\n (['amazing'], 'pos'),\n (['terrible'], 'neg'),\n (['a', 'top-quality', 'performance'], 'pos')]"
      },
-     "execution_count": 131,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,14 +345,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 8,
    "id": "9ebe9a960a606f2a",
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T11:43:45.642049200Z",
-     "start_time": "2023-11-28T11:43:45.585977100Z"
-    },
-    "collapsed": false
+     "end_time": "2023-11-28T14:48:27.541079400Z",
+     "start_time": "2023-11-28T14:48:27.505401700Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -387,14 +369,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 9,
    "id": "6f7407e97440fe9",
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T11:43:45.643044600Z",
-     "start_time": "2023-11-28T11:43:45.604005800Z"
-    },
-    "collapsed": false
+     "end_time": "2023-11-28T14:48:27.553641400Z",
+     "start_time": "2023-11-28T14:48:27.521512500Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -414,14 +396,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 10,
    "id": "6f1edf91b0fa4af8",
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T11:43:45.644551800Z",
-     "start_time": "2023-11-28T11:43:45.618060100Z"
-    },
-    "collapsed": false
+     "end_time": "2023-11-28T14:48:27.637427600Z",
+     "start_time": "2023-11-28T14:48:27.537073400Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -458,14 +440,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 11,
    "id": "c693470fd9e199ef",
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T11:43:45.835625800Z",
-     "start_time": "2023-11-28T11:43:45.643044600Z"
-    },
-    "collapsed": false
+     "end_time": "2023-11-28T14:48:27.751838100Z",
+     "start_time": "2023-11-28T14:48:27.550596700Z"
+    }
    },
    "outputs": [
     {
@@ -543,14 +525,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 12,
    "id": "50aed86d493a1946",
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T11:43:45.875609700Z",
-     "start_time": "2023-11-28T11:43:45.838973500Z"
-    },
-    "collapsed": false
+     "end_time": "2023-11-28T14:48:27.808606500Z",
+     "start_time": "2023-11-28T14:48:27.755373400Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -577,14 +559,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 13,
    "id": "8218746010ae360d",
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T11:43:45.887122600Z",
-     "start_time": "2023-11-28T11:43:45.849479200Z"
-    },
-    "collapsed": false
+     "end_time": "2023-11-28T14:48:27.813149300Z",
+     "start_time": "2023-11-28T14:48:27.770433600Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -608,14 +590,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 14,
    "id": "54db05022a6506a8",
    "metadata": {
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-28T11:44:46.366370900Z",
-     "start_time": "2023-11-28T11:43:45.867017800Z"
-    },
-    "collapsed": false
+     "end_time": "2023-11-28T14:49:24.322228500Z",
+     "start_time": "2023-11-28T14:48:27.787023200Z"
+    }
    },
    "outputs": [
     {
@@ -663,21 +645,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5f67b2bb402e3769",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-28T15:16:38.338329900Z",
+     "start_time": "2023-11-28T15:16:38.328797300Z"
+    }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def filter_by_category(docs, labels, categories, category_name):\n",
+    "    \"\"\"\n",
+    "    Filters the reviews by a specific category.\n",
+    "    \"\"\"\n",
+    "    filtered_docs = []\n",
+    "    filtered_labels = []\n",
+    "\n",
+    "    for doc, label, cat in zip(docs, labels, categories):\n",
+    "        if cat == category_name:\n",
+    "            filtered_docs.append(doc)\n",
+    "            filtered_labels.append(label)\n",
+    "\n",
+    "    return filtered_docs, filtered_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [],
+   "source": [
+    "# Filter documents by category\n",
+    "camera_docs, camera_labels = filter_by_category(all_docs, all_labels, all_categories, 'camera')\n",
+    "book_docs, book_labels = filter_by_category(all_docs, all_labels, all_categories, 'books')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-28T15:19:03.214662300Z",
+     "start_time": "2023-11-28T15:19:03.178247900Z"
+    }
+   },
+   "id": "392ee9d1a861527e"
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "source": [
+    "#### Split the data into training and validation sets"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "be14aa2d66a4ff37"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [],
+   "source": [
+    "def split_pre_filtered_data(docs, labels, train_split=0.8):\n",
+    "    \"\"\"\n",
+    "    Split the filtered documents and labels into training and validation sets.\n",
+    "    \"\"\"\n",
+    "    split_point = int(train_split * len(docs))\n",
+    "    train_docs = docs[:split_point]\n",
+    "    train_labels = labels[:split_point]\n",
+    "    val_docs = docs[split_point:]\n",
+    "    val_labels = labels[split_point:]\n",
+    "    return train_docs, train_labels, val_docs, val_labels"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-28T20:12:15.877313500Z",
+     "start_time": "2023-11-28T20:12:15.871742600Z"
+    }
+   },
+   "id": "3458e027cb4d1a61"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [],
+   "source": [
+    "camera_train_docs, camera_train_labels, camera_val_docs, camera_val_labels = split_pre_filtered_data(camera_docs, camera_labels)\n",
+    "book_train_docs, book_train_labels, book_val_docs, book_val_labels = split_pre_filtered_data(book_docs, book_labels)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-28T20:12:24.662699300Z",
+     "start_time": "2023-11-28T20:12:24.607916500Z"
+    }
+   },
+   "id": "860f539fde1de45f"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Train the classifier on the camera and book reviews"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c9da015b11699c74"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Camera Classifier on Camera Reviews Accuracy: 0.8675\n",
+      "Book Classifier on Book Reviews Accuracy: 0.7925\n",
+      "Camera Classifier on Book Reviews Accuracy: 0.71\n",
+      "Book Classifier on Camera Reviews Accuracy: 0.65\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train classifier for camera reviews\n",
+    "camera_model, camera_log_prob_class = train_nb(camera_train_docs, camera_train_labels)\n",
+    "\n",
+    "# Evaluate classifier on camera validation set\n",
+    "camera_predicted_labels = classify_documents(camera_val_docs, camera_model, camera_log_prob_class)\n",
+    "camera_accuracy = accuracy(camera_val_labels, camera_predicted_labels)\n",
+    "\n",
+    "# Train classifier for book reviews\n",
+    "book_model, book_log_prob_class = train_nb(book_train_docs, book_train_labels)\n",
+    "\n",
+    "# Evaluate classifier on book validation set\n",
+    "book_predicted_labels = classify_documents(book_val_docs, book_model, book_log_prob_class)\n",
+    "book_accuracy = accuracy(book_val_labels, book_predicted_labels)\n",
+    "\n",
+    "# Evaluate the classifiers on the opposite domain\n",
+    "camera_on_book_accuracy = accuracy(book_val_labels, classify_documents(book_val_docs, camera_model, camera_log_prob_class))\n",
+    "book_on_camera_accuracy = accuracy(camera_val_labels, classify_documents(camera_val_docs, book_model, book_log_prob_class))\n",
+    "\n",
+    "# Show the results\n",
+    "print(f\"Camera Classifier on Camera Reviews Accuracy: {camera_accuracy}\")\n",
+    "print(f\"Book Classifier on Book Reviews Accuracy: {book_accuracy}\")\n",
+    "print(f\"Camera Classifier on Book Reviews Accuracy: {camera_on_book_accuracy}\")\n",
+    "print(f\"Book Classifier on Camera Reviews Accuracy: {book_on_camera_accuracy}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-28T20:19:05.218209700Z",
+     "start_time": "2023-11-28T20:19:04.588084300Z"
+    }
+   },
+   "id": "903324be8dfcd766"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Classifier Performance Analysis\n",
+    "#### Within-Domain Accuracy\n",
+    "* **Camera Classifier on Camera Reviews**: Achieved an accuracy of 0.8675. The high accuracy indicates that the classifier is well-tuned to the specific features and patterns present in camera reviews. \n",
+    "* **Book Classifier on Book Reviews**: Accomplished an accuracy of 0.7925. While slightly lower than the camera classifier, it still shows a strong performance suggesting a good model fit to book review data.\n",
+    "\n",
+    "#### Cross-Domain Accuracy\n",
+    "* **Camera Classifier on Book Reviews**: The accuracy dropped to 0.71 when the camera classifier was applied to book reviews. This significant drop in accuracy highlights the domain sensitivity. In turn indicating that features learned from camera reviews are not as effective in classifying book reviews.\n",
+    "* **Book Classifier on Camera Reviews**: Saw an even further drop in accuracy to 0.65. Similarly to the camera classifier, the book classifier was not able to generalize well to the camera reviews.\n",
+    "\n",
+    "#### Conclusion\n",
+    "The results demonstrate a clear importance of domain sensitivity. Both classifiers perform well within their respective domains showing that they have learned domain-specific features effectively. However, when applied to a different domain their accuracy drops significantly demonstrating the importance of domain-specific language and features in text classification tasks. \n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "5e721646af4a471b"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Naive Bayes for numerical data"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ab729f4edc6ceeaa"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d9906c899c9a6618"
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "## References:\n",
     "* Add 1 (Laplace) Smoothing: https://courses.engr.illinois.edu/cs447/fa2018/Slides/Lecture04.pdf"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "84338698f856244e"
   }
  ],
  "metadata": {
