Add part 3 discussion

--- a/Assignment 3/Assignment_3_FE.ipynb
+++ b/Assignment 3/Assignment_3_FE.ipynb
@@ -653,6 +653,16 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "### Choose the best K on the breast_cancer data set using AIC and BIC and discuss your observations\n",
+    "The optimal number of components for the breast cancer dataset appears to be K=2, as indicated by the lowest AIC and BIC values at this point. This suggests that a model with two Gaussian components best captures the data's structure without unnecessary complexity. Beyond K=2, the increasing AIC and BIC values imply that additional components are not justified, favoring a simpler model that sufficiently explains the data."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### References:\n",
