Add inital dataset check

--- a/Project/Project.ipynb
+++ b/Project/Project.ipynb
@@ -39,11 +39,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(        id                                              title  \\\n 0   N00000  Personalkostnader som andel av verksamhetens k...   \n 1   N00003                          Personalkostnader, kr/inv   \n 2   N00005     Utjämningssystemet enl resultaträkning, kr/inv   \n 3   N00009                   Intäkter kommunen totalt, kr/inv   \n 4   N00011  Inkomstutjämning, bidrag/avgift, kr/inv. 1 nov...   \n 5   N00012           Kostnadsutjämning, bidrag/avgift, kr/inv   \n 6   N00014            Regleringsbidrag/avgift, kr/inv (2005-)   \n 7   N00016                 Utjämningssystemet enl SCB, kr/inv   \n 8   N00018                    Införandebidrag, kr/inv (2005-)   \n 9   N00019                     Strukturbidrag, kr/inv (2005-)   \n 10  N00021               Intäkter egentlig verksamhet, kr/inv   \n 11  N00022  Kostnadsutjämningsnetto förskola och skolbarns...   \n 12  N00023  Kostnadsutjämningsnetto grundskola, kr/inv 1 n...   \n 13  N00024  Kostnadsutjämningsnetto äldreomsorg, kr/inv 1 ...   \n 14  N00025  Kostnadsutjämningsnetto individ- och familjeom...   \n \n                                           description municipality_type  \\\n 0   Personalkostnader kommunen totalt, dividerat m...                 K   \n 1   Personalkostnader kommunen totalt, dividerat m...                 K   \n 2   Kommunalekonomisk utjämning kommun, dividerat ...                 K   \n 3   Externa intäkter exklusive intäkter från försä...                 K   \n 4   Inkomstutjämning, bidrag/avgift, i kronor per ...                 K   \n 5   Kostnadsutjämning, bidrag/avgift, i kronor per...                 K   \n 6   Regleringsbidrag/avgift, i kronor per invånare...                 K   \n 7     Utjämningssystemet enl SCB, kr/inv. Källa: SCB.                 K   \n 8   Införandebidrag, i kronor per invånare den 1/1...                 K   \n 9   Strukturbidrag, i kronor per invånare den 1/11...                 K   \n 10  Externa intäkter exklusive intäkter från försä...                 K   \n 11  Kostnadsutjämningsnetto förskola och skolbarno...                 K   \n 12  Kostnadsutjämningsnetto grundskola beräknas so...                 K   \n 13  Kostnadsutjämningsnetto äldreomsorg beräknas s...                 K   \n 14  Kostnadsutjämningsnetto individ- och familjeom...                 K   \n \n     is_divided_by_gender  publ_period publication_date  \n 0                      0          NaN              NaN  \n 1                      0       2023.0       2024-08-31  \n 2                      0       2023.0       2024-08-31  \n 3                      0       2023.0       2024-02-22  \n 4                      0       2024.0       2023-12-21  \n 5                      0       2024.0       2023-12-21  \n 6                      0       2024.0       2023-12-21  \n 7                      0       2024.0       2023-12-21  \n 8                      0       2024.0       2023-12-21  \n 9                      0       2024.0       2023-12-21  \n 10                     0       2023.0       2024-08-31  \n 11                     0       2024.0       2023-12-21  \n 12                     0       2024.0       2023-12-21  \n 13                     0       2024.0       2023-12-21  \n 14                     0       2024.0       2023-12-21  ,\n        kpi  municipality  period gender      value\n 0   N00125             0    2005      K   413614.9\n 1   N00125             0    2005      M   608000.4\n 2   N00125             0    2005      T  1026487.7\n 3   N00125             1    2005      K   112430.4\n 4   N00125             1    2005      M   164647.6\n 5   N00125             1    2005      T   278913.2\n 6   N00125             3    2005      K    13403.7\n 7   N00125             3    2005      M    17150.8\n 8   N00125             3    2005      T    30674.2\n 9   N00125             4    2005      K    10107.8\n 10  N00125             4    2005      M    13895.1\n 11  N00125             4    2005      T    24055.6\n 12  N00125             5    2005      K    16792.9\n 13  N00125             5    2005      M    26139.6\n 14  N00125             5    2005      T    43049.2,\n       id       title type\n 0   1440         Ale    K\n 1   1489    Alingsås    K\n 2    764     Alvesta    K\n 3    604       Aneby    K\n 4   1984      Arboga    K\n 5   2506    Arjeplog    K\n 6   2505  Arvidsjaur    K\n 7   1784      Arvika    K\n 8   1882   Askersund    K\n 9   2084      Avesta    K\n 10  1460  Bengtsfors    K\n 11  2326        Berg    K\n 12  2403    Bjurholm    K\n 13  1260        Bjuv    K\n 14  2582       Boden    K)"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the datasets\n",
+    "kpi_data_path = 'data/kpi_data.csv'\n",
+    "kpi_values_path = 'data/kpi_values.csv'\n",
+    "municipalities_data_path = 'data/municipalities_data.csv'\n",
+    "\n",
+    "# Read the data\n",
+    "kpi_data = pd.read_csv(kpi_data_path)\n",
+    "kpi_values = pd.read_csv(kpi_values_path)\n",
+    "municipalities_data = pd.read_csv(municipalities_data_path)\n",
+    "\n",
+    "# Displaying the first few rows of each dataset\n",
+    "kpi_data_head = kpi_data.head(15)\n",
+    "kpi_values_head = kpi_values.head(15)\n",
+    "municipalities_data_head = municipalities_data.head(15)\n",
+    "\n",
+    "(kpi_data_head, kpi_values_head, municipalities_data_head)"
+   ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-27T18:43:00.590934Z",
+     "start_time": "2023-12-27T18:42:54.121607100Z"
+    }
    },
    "id": "42faebb1f7693543"
   },
